# math

./: CMakeLists.txt
cmake/: CMakeLists.txt
cmake/cmake_functions/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake/cmake_functions/functions/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
docs/: Doxyfile.in
include/ph/math/: definitions.h  line.hpp  math.hpp  matrix.hpp  plane.hpp  point.hpp  test.hpp  vector.hpp
src/: line.cpp  math.cpp  pch.pch  plane.cpp  point.cpp  test.cpp  vector.cpp
test/src/: main.cpp  pch.pch
